style: adjust navigation bar heading colour.  fix: correct navigation links for register and login routes

--- a/ServiceBookingSystemWeb/src/app/app.component.html
+++ b/ServiceBookingSystemWeb/src/app/app.component.html
@@ -1,12 +1,13 @@
 <nz-header class="main-header" nz-row nzType="flex" style="background-color: aquamarine;">
 
   <div>
-    <h2 style="color: aliceblue; padding-left: 10px;">Service Booking Sysytem</h2>
+    <h2 style="color: rgb(40, 44, 48); padding-left: 10px;">Service Booking Sysytem</h2>
   </div>
 
   <div class="nav-links">
     <a nz-button nzType="link" routerLink="/home" routerLinkActive="active">Home</a>
-    <a nz-button nzType="link" routerLink="/register" routerLinkActive="register">Home</a>
-    <a nz-button nzType="link" routerLink="/login" routerLinkActive="login">Home</a>
+    <a nz-button nzType="link" routerLink="/register" routerLinkActive="active">register</a>
+    <a nz-button nzType="link" routerLink="/login" routerLinkActive="active">login</a>
   </div>
+  
 </nz-header>
