--- a/ServiceBookingSystemWeb/src/app/app.component.html
+++ b/ServiceBookingSystemWeb/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nz-header class="main-header" nz-row nzType="flex" style="background-color: aquamarine;">
 
   <div>
-    <h2 style="color: rgb(40, 44, 48); padding-left: 10px;">Service Booking Sysytem</h2>
+    <h2 style="color: rgb(40, 44, 48); padding-left: 10px;">Service Booking System</h2>
   </div>
 
   <div class="nav-links">
@@ -9,5 +9,7 @@
     <a nz-button nzType="link" routerLink="/register" routerLinkActive="active">register</a>
     <a nz-button nzType="link" routerLink="/login" routerLinkActive="active">login</a>
   </div>
-  
+
 </nz-header>
+
+<router-outlet></router-outlet>
